istio/routing.1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs.frontend
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - route:
    - destination:
        host: frontend
        port: 
          number: 80
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs.middleware
spec:
  hosts:
  - middleware
  http:
  - route:
    - destination:
        host: middleware
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs.backend
spec:
  hosts:
  - backend
  http:
  - route:
    - destination:
        host: backend
        subset: v1
---
